--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,21 @@ dependencies {
     server 'org.apache.commons:commons-digester3:3.2'
     server 'commons-cli:commons-cli:1.2'
 
+    server group: 'org.elasticsearch.client', name: 'transport', version: '5.0.0'
+    // required for elasticsearch
+    server group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.7'
+    serverRuntime group: 'org.aspectj', name: 'aspectjweaver', version: '1.8.9'
+    server 'commons-lang:commons-lang:2.6'
+    server 'mysql:mysql-connector-java:5.1.38'
+    server group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.8.11'
+    server 'org.hibernate:hibernate-entitymanager:5.1.0.Final'
+    server group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.11'
+    server group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '2.2.11'
+    server group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.2.11'
+    server group: 'javax.el', name: 'javax.el-api', version: '3.0.0'
+    server 'org.apache.poi:poi:3.10.1'
+    server 'org.apache.poi:poi-ooxml:3.10.1'
+
     server group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
     compile composite.resolveDependency("org.biocode:biocode-fims-commons:${fimsCommonsVersion}", "biocode-fims-commons")
 
@@ -66,10 +81,10 @@ dependencies {
     }
 
     testCompile "junit:junit-dep:4.10"
+    testCompile group: 'org.springframework', name: 'spring-test', version: '4.3.4.RELEASE'
     integrationTestRuntime group: 'org.aspectj', name: 'aspectjweaver', version: '1.8.9'
     // need to use the following until https://github.com/gradle/gradle/issues/1553 is resolved. Then we can update DependencyResolver dependency substitution code
-    integrationTestCompile project(path: ":biocode-fims-commons", configuration: "integrationTestOutput")
-//    integrationTestCompile composite.resolveDependency("org.biocode:biocode-fims-commons:${fimsCommonsVersion}", "biocode-fims-commons", "integrationTestOutput")
+    integrationTestCompile composite.resolveDependency("org.biocode:biocode-fims-commons:${fimsCommonsVersion}", "biocode-fims-commons")
 
     subprojects.each {
         project.configurations.server.dependencies.addAll(it.configurations.server.dependencies)
