--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     server 'commons-lang:commons-lang:2.6'
     server 'mysql:mysql-connector-java:5.1.38'
     server group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.8.11'
+    server 'org.glassfish.jersey.media:jersey-media-json-jackson:2.25'
     server 'org.hibernate:hibernate-entitymanager:5.1.0.Final'
     server group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.11'
     server group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '2.2.11'
