--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     server group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.11'
     server group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '2.2.11'
     server group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.2.11'
+    server group: 'javax.activation', name: 'activation', version: '1.1.1'
     server group: 'javax.el', name: 'javax.el-api', version: '3.0.0'
     server 'org.apache.poi:poi:3.10.1'
     server 'org.apache.poi:poi-ooxml:3.10.1'
