--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     server group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.7'
     serverRuntime group: 'org.aspectj', name: 'aspectjweaver', version: '1.8.9'
     server 'commons-lang:commons-lang:2.6'
+    server 'org.apache.commons:commons-dbcp2:2.1.1'
     server 'mysql:mysql-connector-java:5.1.38'
     server group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.8.11'
     server 'org.glassfish.jersey.media:jersey-media-json-jackson:2.25'
