--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     server 'commons-lang:commons-lang:2.6'
     server 'org.apache.commons:commons-dbcp2:2.1.1'
     server 'mysql:mysql-connector-java:5.1.38'
+    server 'org.xerial:sqlite-jdbc:3.7.2'
     server group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.8.11'
     server 'org.glassfish.jersey.media:jersey-media-json-jackson:2.25'
     server 'org.hibernate:hibernate-entitymanager:5.1.0.Final'
