--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     serverRuntime group: 'org.aspectj', name: 'aspectjweaver', version: '1.8.9'
     server 'commons-lang:commons-lang:2.6'
     server 'org.apache.commons:commons-dbcp2:2.1.1'
+    server group: 'commons-validator', name: 'commons-validator', version: '1.6'
     server 'mysql:mysql-connector-java:5.1.38'
     server 'org.xerial:sqlite-jdbc:3.7.2'
     server group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.8.11'
